added some text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<h1>My Personal Profile</h1>
+	<p>Hi, my name is Yejiel, i was born in Caracas, Venezuela, when i was 10 years old we move to mexico due to the rising of violence in Venezuela, been living there ever since. </br> A few months ago i moved to israel with my wife to pursue a career on programming, the way to go was Elevation Academy. </br></p>
 </body>
 </html>
