added linkedin info

--- a/contact.html
+++ b/contact.html
@@ -13,5 +13,6 @@
 </nav>
 
 <h1 class="title">LinkedIn Profile</h1>
+<p><a href="www.linkedin.com/in/yejiel-wahnich">My LinkedIn Profile</a></p>
 </body>
 </html>
