--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<title>MySite</title>
+	<link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="contact.html">Contact Information</a></li>
+		<li class="left-side"><a href="contact.html">Contact Information</a></li>
 	</ul>
 </nav>
 <div class="container1">
