--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,6 @@
 </nav>
 
 <h1 class="title">LinkedIn Profile</h1>
-<p><a href="www.linkedin.com/in/yejiel-wahnich">My LinkedIn Profile</a></p>
+<p><a href="https://www.linkedin.com/in/yejiel-wahnich" target="_blank"><b>My LinkedIn Profile</b></a></p>
 </body>
 </html>
