--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li class="left-side"><a href="contact.html">Contact Information</a></li>
+		<li><a href="portfolio.html">My Projects</a></li>
+		<li><a href="contact.html">Contact Information</a></li>
 	</ul>
 </nav>
 <div class="container1">
