added some style

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </nav>
 <div class="container1">
 	<h1 class="title">My Personal Profile</h1>
-	<p>Hi, my name is Yejiel, i was born in Caracas, Venezuela, when i was 10 years old we move to mexico due to the rising of violence in Venezuela, been living there ever since. </br> A few months ago i moved to israel with my wife to pursue a career on programming, the way to go was Elevation Academy. </br></p>
-	<img class="hero" src="image1.jpg">
+	<p class="description">Hi, my name is Yejiel, i was born in Caracas, Venezuela, when i was 10 years old we move to mexico due to the rising of violence in Venezuela, been living there ever since. </br> A few months ago i moved to israel with my wife to pursue a career on programming, the way to go was Elevation Academy. </br></p>
+	<!-- <img class="hero" src="image1.jpg"> -->
 </div>
 </body>
 </html>
