added contact logos and background

--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,17 @@
 <nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
+		<li><a href="portfolio.html">My Projects</a></li>
 		<li><a href="contact.html">Contact Information</a></li>
 	</ul>
 </nav>
-
-<h1 class="title">LinkedIn Profile</h1>
-<p><a href="https://www.linkedin.com/in/yejiel-wahnich" target="_blank"><b>My LinkedIn Profile</b></a></p>
+<div class="container2">
+<h1 class="title">My Social Profiles</h1>
+	<ul class="center-list">
+		<li class="in-line"><a href="https://www.linkedin.com/in/yejiel-wahnich" target="_blank"><img class="logo" src="Logos/linkLogo.jpg"></a></li>
+		<li class="in-line"></li>
+		<li class="in-line"><a href="https://www.facebook.com/yejielwg" target="_blank"><img class="logo" src="Logos/faceLogo.jpg"></a></li>
+	</ul>
+</div>
 </body>
 </html>
