--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </nav>
 <div class="container1">
 	<h1 class="title">GitHub Repo Projects </br>
-	<img class="logo" src="gitHubImg.jpg"></h1>
+	<img class="logo" src="Logos/gitHubImg.jpg"></h1>
 		<div class="repos">
 			<div class="row">
 			    <div class="column" >
