--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <nav>
+<h3 class="nav-class">Yejiel W. Site</h3>
 	<ul>
+		<li></li>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="portfolio.html">My Projects</a></li>
 		<li><a href="contact.html">Contact Information</a></li>
