--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 	<title>MySite</title>
 	<link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
+    <script type="text/javascript" src="script.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <nav>
 <h3 class="nav-class">Yejiel W. Site</h3>
-	<ul>
+	<ul class="topnav">
 		<li></li>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="portfolio.html">My Projects</a></li>
 		<li><a href="contact.html">Contact Information</a></li>
+		  <li class="icon">
+    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+  </li>
 	</ul>
 </nav>
 <div class="container1">
